crates/rpc-cli/tests/snapshots/svelte__snapshot_svelte_full.snap
---
source: crates/rpc-cli/tests/svelte.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

import { type RpcClient, RpcError, type CallOptions } from "./rpc-client";

import type { Procedures, TimeResponse, CreateInput, Item } from "./rpc-types";

export { RpcError };
export type { RpcClient, CallOptions, Procedures, TimeResponse, CreateInput, Item };

type QueryKey = keyof Procedures["queries"];
type QueryInput<K extends QueryKey> = Procedures["queries"][K]["input"];
type QueryOutput<K extends QueryKey> = Procedures["queries"][K]["output"];
type MutationKey = keyof Procedures["mutations"];
type MutationInput<K extends MutationKey> = Procedures["mutations"][K]["input"];
type MutationOutput<K extends MutationKey> = Procedures["mutations"][K]["output"];

type VoidQueryKey = "time";
type NonVoidQueryKey = "hello";
type NonVoidMutationKey = "create_item";
type MutationArgs<K extends MutationKey> = [input: MutationInput<K>];

export interface QueryOptions<K extends QueryKey> {
  /**
   * Whether to execute the query. @default true
   *
   * Pass a getter `() => bool` for reactive updates — a plain `boolean` is
   * read once when `createQuery` is called and will not trigger re-fetches.
   */
  enabled?: boolean | (() => boolean);

  /** Auto-refetch interval in milliseconds. Set to 0 or omit to disable. */
  refetchInterval?: number;

  /** Initial data shown before the first fetch completes. */
  placeholderData?: QueryOutput<K>;

  /** Per-call options forwarded to client.query(). */
  callOptions?: CallOptions;

  /** Called when the query succeeds. */
  onSuccess?: (data: QueryOutput<K>) => void;

  /** Called when the query fails. */
  onError?: (error: RpcError) => void;

  /** Called when the query settles (success or failure). */
  onSettled?: () => void;
}

export type QueryStatus = "idle" | "loading" | "success" | "error";

export interface QueryResult<K extends QueryKey> {
  /** The latest successfully resolved data, or placeholderData. */
  readonly data: QueryOutput<K> | undefined;

  /** The error from the most recent failed fetch, cleared on success. */
  readonly error: RpcError | undefined;

  /** Current status of the query state machine. */
  readonly status: QueryStatus;

  /** True while a fetch is in-flight (including the initial fetch). */
  readonly isLoading: boolean;

  /** True after the first successful fetch. Stays true across refetches. */
  readonly isSuccess: boolean;

  /** True when the most recent fetch failed. */
  readonly isError: boolean;

  /** True when placeholderData is being shown and no real fetch has completed yet. */
  readonly isPlaceholderData: boolean;

  /** Manually trigger a refetch. */
  refetch: () => Promise<void>;
}

export interface MutationOptions<K extends MutationKey> {
  /** Per-call options forwarded to client.mutate(). */
  callOptions?: CallOptions;

  /** Called when the mutation succeeds. */
  onSuccess?: (data: MutationOutput<K>) => void;

  /** Called when the mutation fails. */
  onError?: (error: RpcError) => void;

  /** Called when the mutation settles (success or failure). */
  onSettled?: () => void;
}

export type MutationStatus = "idle" | "loading" | "success" | "error";

export interface MutationResult<K extends MutationKey> {
  /** Execute the mutation. Rejects on error. */
  mutate: (...args: MutationArgs<K>) => Promise<void>;

  /** Execute the mutation and return the result. Rejects on error. */
  mutateAsync: (...args: MutationArgs<K>) => Promise<MutationOutput<K>>;

  /** The latest successfully resolved data. */
  readonly data: MutationOutput<K> | undefined;

  /** The error from the most recent failed mutation, cleared on next attempt. */
  readonly error: RpcError | undefined;

  /** Current status of the mutation state machine. */
  readonly status: MutationStatus;

  /** True while a mutation is in-flight. */
  readonly isLoading: boolean;

  /** True after the most recent mutation succeeded. */
  readonly isSuccess: boolean;

  /** True when the most recent mutation failed. */
  readonly isError: boolean;

  /** Reset state back to idle (clear data, error, status). */
  reset: () => void;
}

export function createQuery<K extends "time">(client: RpcClient, key: K, options?: QueryOptions<K>): QueryResult<K>;
export function createQuery<K extends "hello">(client: RpcClient, key: K, input: () => QueryInput<K>, options?: QueryOptions<K>): QueryResult<K>;
export function createQuery<K extends QueryKey>(
  client: RpcClient,
  ...args: unknown[]
): QueryResult<K> {
  const key = args[0] as K;

  const inputFn = typeof args[1] === "function"
    ? args[1] as () => QueryInput<K>
    : undefined;
  const options = (typeof args[1] === "object" ? args[1] : args[2]) as
    | QueryOptions<K>
    | undefined;

  let data = $state<QueryOutput<K> | undefined>(options?.placeholderData);
  let error = $state<RpcError | undefined>();
  let status = $state<QueryStatus>("idle");

  async function fetchData(input?: QueryInput<K>) {
    status = "loading";
    error = undefined;
    try {
      const callArgs: unknown[] = [key];
      if (input !== undefined) callArgs.push(input);
      if (options?.callOptions) callArgs.push(options.callOptions);
      data = await (client.query as (...a: unknown[]) => Promise<unknown>)(...callArgs) as QueryOutput<K>;
      status = "success";
      options?.onSuccess?.(data!);
    } catch (e) {
      error = e as RpcError;
      status = "error";
      options?.onError?.(error);
    } finally {
      options?.onSettled?.();
    }
  }

  $effect(() => {
    const enabled = typeof options?.enabled === "function"
      ? options.enabled()
      : (options?.enabled ?? true);
    const input = inputFn?.();
    if (!enabled) return;

    void fetchData(input);

    if (options?.refetchInterval) {
      const interval = setInterval(() => fetchData(inputFn?.()), options.refetchInterval);
      return () => clearInterval(interval);
    }
  });

  return {
    get data() { return data; },
    get error() { return error; },
    get status() { return status; },
    get isLoading() { return status === "loading"; },
    get isSuccess() { return status === "success"; },
    get isError() { return status === "error"; },
    get isPlaceholderData() { return status !== "success" && data !== undefined; },
    refetch: () => fetchData(inputFn?.()),
  };
}

export function createMutation<K extends MutationKey>(
  client: RpcClient,
  key: K,
  options?: MutationOptions<K>,
): MutationResult<K> {
  let data = $state<MutationOutput<K> | undefined>();
  let error = $state<RpcError | undefined>();
  let status = $state<MutationStatus>("idle");

  async function execute(...input: MutationArgs<K>): Promise<MutationOutput<K>> {
    status = "loading";
    error = undefined;
    try {
      const callArgs: unknown[] = [key];
      if (input.length > 0) callArgs.push(input[0]);
      if (options?.callOptions) callArgs.push(options.callOptions);
      const result = await (client.mutate as (...a: unknown[]) => Promise<unknown>)(...callArgs) as MutationOutput<K>;
      data = result;
      status = "success";
      options?.onSuccess?.(result);
      return result;
    } catch (e) {
      error = e as RpcError;
      status = "error";
      options?.onError?.(error);
      throw e;
    } finally {
      options?.onSettled?.();
    }
  }

  return {
    mutate: async (...args: MutationArgs<K>) => { await execute(...args); },
    mutateAsync: (...args: MutationArgs<K>) => execute(...args),
    get data() { return data; },
    get error() { return error; },
    get status() { return status; },
    get isLoading() { return status === "loading"; },
    get isSuccess() { return status === "success"; },
    get isError() { return status === "error"; },
    reset: () => { data = undefined; error = undefined; status = "idle"; },
  } as MutationResult<K>;
}
