crates/rpc-cli/tests/snapshots/svelte__snapshot_svelte_mutations_only.snap
---
source: crates/rpc-cli/tests/svelte.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

import { type RpcClient, RpcError, type CallOptions } from "./rpc-client";

import type { Procedures } from "./rpc-types";

export { RpcError };
export type { RpcClient, CallOptions, Procedures };

type MutationKey = keyof Procedures["mutations"];
type MutationInput<K extends MutationKey> = Procedures["mutations"][K]["input"];
type MutationOutput<K extends MutationKey> = Procedures["mutations"][K]["output"];

type VoidMutationKey = "reset";
type NonVoidMutationKey = "create_item";
type MutationArgs<K extends MutationKey> = K extends VoidMutationKey ? [] : [input: MutationInput<K>];

export interface MutationOptions<K extends MutationKey> {
  /** Per-call options forwarded to client.mutate(). */
  callOptions?: CallOptions;

  /** Called when the mutation succeeds. */
  onSuccess?: (data: MutationOutput<K>) => void;

  /** Called when the mutation fails. */
  onError?: (error: RpcError) => void;

  /** Called when the mutation settles (success or failure). */
  onSettled?: () => void;
}

export interface MutationResult<K extends MutationKey> {
  /** Execute the mutation. Rejects on error. */
  mutate: (...args: MutationArgs<K>) => Promise<void>;

  /** Execute the mutation and return the result. Rejects on error. */
  mutateAsync: (...args: MutationArgs<K>) => Promise<MutationOutput<K>>;

  /** The latest successfully resolved data. */
  readonly data: MutationOutput<K> | undefined;

  /** The error from the most recent failed mutation, cleared on next attempt. */
  readonly error: RpcError | undefined;

  /** True while a mutation is in-flight. */
  readonly isLoading: boolean;

  /** True after the most recent mutation succeeded. */
  readonly isSuccess: boolean;

  /** True when error is set. */
  readonly isError: boolean;

  /** Reset state back to idle (clear data, error, status). */
  reset: () => void;
}

export function createMutation<K extends MutationKey>(
  client: RpcClient,
  key: K,
  options?: MutationOptions<K>,
): MutationResult<K> {
  let data = $state<MutationOutput<K> | undefined>();
  let error = $state<RpcError | undefined>();
  let isLoading = $state(false);

  async function execute(...input: unknown[]): Promise<MutationOutput<K>> {
    isLoading = true;
    error = undefined;
    try {
      const args: unknown[] = [key];
      if (input.length > 0) args.push(input[0]);
      if (options?.callOptions) args.push(options.callOptions);
      const result = await (client.mutate as Function)(...args) as MutationOutput<K>;
      data = result;
      options?.onSuccess?.(result);
      return result;
    } catch (e) {
      error = e as RpcError;
      options?.onError?.(error);
      throw e;
    } finally {
      isLoading = false;
      options?.onSettled?.();
    }
  }

  return {
    mutate: async (...args: unknown[]) => { await execute(...args); },
    mutateAsync: (...args: unknown[]) => execute(...args),
    get data() { return data; },
    get error() { return error; },
    get isLoading() { return isLoading; },
    get isSuccess() { return data !== undefined && error === undefined; },
    get isError() { return error !== undefined; },
    reset: () => { data = undefined; error = undefined; isLoading = false; },
  } as MutationResult<K>;
}
