crates/rpc-cli/tests/snapshots/svelte__snapshot_svelte_queries_only.snap
---
source: crates/rpc-cli/tests/svelte.rs
expression: output
---
// This file is auto-generated by vercel-rpc-cli. Do not edit manually.
// Re-run `rpc generate` or use `rpc watch` to regenerate.

import { type RpcClient, RpcError, type CallOptions } from "./rpc-client";

import type { Procedures } from "./rpc-types";

export { RpcError };
export type { RpcClient, CallOptions, Procedures };

type QueryKey = keyof Procedures["queries"];
type QueryInput<K extends QueryKey> = Procedures["queries"][K]["input"];
type QueryOutput<K extends QueryKey> = Procedures["queries"][K]["output"];

type VoidQueryKey = "version";
type NonVoidQueryKey = "get_user";

export interface QueryOptions<K extends QueryKey> {
  /**
   * Whether to execute the query. @default true
   *
   * Pass a getter `() => bool` for reactive updates — a plain `boolean` is
   * read once when `createQuery` is called and will not trigger re-fetches.
   */
  enabled?: boolean | (() => boolean);

  /** Auto-refetch interval in milliseconds. Set to 0 or omit to disable. */
  refetchInterval?: number;

  /** Initial data shown before the first fetch completes. */
  placeholderData?: QueryOutput<K>;

  /** Per-call options forwarded to client.query(). */
  callOptions?: CallOptions;

  /** Called when the query succeeds. */
  onSuccess?: (data: QueryOutput<K>) => void;

  /** Called when the query fails. */
  onError?: (error: RpcError) => void;

  /** Called when the query settles (success or failure). */
  onSettled?: () => void;
}

export type QueryStatus = "idle" | "loading" | "success" | "error";

export interface QueryResult<K extends QueryKey> {
  /** The latest successfully resolved data, or placeholderData. */
  readonly data: QueryOutput<K> | undefined;

  /** The error from the most recent failed fetch, cleared on success. */
  readonly error: RpcError | undefined;

  /** Current status of the query state machine. */
  readonly status: QueryStatus;

  /** True while a fetch is in-flight (including the initial fetch). */
  readonly isLoading: boolean;

  /** True after the first successful fetch. Stays true across refetches. */
  readonly isSuccess: boolean;

  /** True when the most recent fetch failed. */
  readonly isError: boolean;

  /** True when placeholderData is being shown and no real fetch has completed yet. */
  readonly isPlaceholderData: boolean;

  /** Manually trigger a refetch. */
  refetch: () => Promise<void>;
}

export function createQuery<K extends "version">(client: RpcClient, key: K, options?: QueryOptions<K>): QueryResult<K>;
export function createQuery<K extends "get_user">(client: RpcClient, key: K, input: () => QueryInput<K>, options?: QueryOptions<K>): QueryResult<K>;
export function createQuery<K extends QueryKey>(
  client: RpcClient,
  ...args: unknown[]
): QueryResult<K> {
  const key = args[0] as K;

  const inputFn = typeof args[1] === "function"
    ? args[1] as () => QueryInput<K>
    : undefined;
  const options = (typeof args[1] === "object" ? args[1] : args[2]) as
    | QueryOptions<K>
    | undefined;

  let data = $state<QueryOutput<K> | undefined>(options?.placeholderData);
  let error = $state<RpcError | undefined>();
  let status = $state<QueryStatus>("idle");

  async function fetchData(input?: QueryInput<K>) {
    status = "loading";
    error = undefined;
    try {
      const callArgs: unknown[] = [key];
      if (input !== undefined) callArgs.push(input);
      if (options?.callOptions) callArgs.push(options.callOptions);
      data = await (client.query as (...a: unknown[]) => Promise<unknown>)(...callArgs) as QueryOutput<K>;
      status = "success";
      options?.onSuccess?.(data!);
    } catch (e) {
      error = e as RpcError;
      status = "error";
      options?.onError?.(error);
    } finally {
      options?.onSettled?.();
    }
  }

  $effect(() => {
    const enabled = typeof options?.enabled === "function"
      ? options.enabled()
      : (options?.enabled ?? true);
    const input = inputFn?.();
    if (!enabled) return;

    void fetchData(input);

    if (options?.refetchInterval) {
      const interval = setInterval(() => fetchData(inputFn?.()), options.refetchInterval);
      return () => clearInterval(interval);
    }
  });

  return {
    get data() { return data; },
    get error() { return error; },
    get status() { return status; },
    get isLoading() { return status === "loading"; },
    get isSuccess() { return status === "success"; },
    get isError() { return status === "error"; },
    get isPlaceholderData() { return status !== "success" && data !== undefined; },
    refetch: () => fetchData(inputFn?.()),
  };
}
